fixed double clicking on sfw button, fixed legend spacing, fixed feature score spacing, added radar chart tooltip

--- a/app/static/css/featuredisplay.css
+++ b/app/static/css/featuredisplay.css
@@ -186,7 +186,8 @@
 .container.anime-statistics {
     width: 100%;
     height: 90%;
-    overflow-y: scroll;
+    overflow-y: overlay;
+    overflow-x: scroll;
     color: white;
     display: inline-block;
 }
@@ -321,6 +322,7 @@
     font-size: 35;
     font-family: "Futura";
     margin-top: 8px;
+    margin-left: 30px;
 }
 
 #episodeinfo {
@@ -358,6 +360,7 @@
     font-size: 30;
     padding: 0;
     margin: 0;
+    margin-right: 30px;
 }
 
 .media-header .row {
@@ -376,8 +379,12 @@
     padding: 0;
 }
 
-.media-header .col.type {
+#media-type {
     text-align: left;
+}
+
+#media-type span {
+    margin-left: 30px;
 }
 
 .media-header .row.genres {
@@ -392,6 +399,10 @@
 
 #episode-count {
     text-align: right;
+}
+
+#episode-count span {
+    margin-right: 30px;
 }
 
 .media-footer {
