--- a/app/static/css/search.css
+++ b/app/static/css/search.css
@@ -1,3 +1,11 @@
+*.unselectable {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -user-select: none;
+}
+
 html, body {
     height: 100%;
 }
@@ -240,7 +248,7 @@ hr {
     color: lightslategray;
 }
 
-#chart-legends.flex-column {
+#chart-legends {
     padding-right: 20px;
     padding-left: 20px;
 }
@@ -248,6 +256,7 @@ hr {
 #chart-legends label {
     padding: 0;
     margin: 0;
+    display: table;
 }
 
 .legend-button {
